logs/scrum-tools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/cement'...
Listing './lib/python3.5/site-packages/cement/core'...
Listing './lib/python3.5/site-packages/cement/ext'...
Listing './lib/python3.5/site-packages/cement/utils'...
Listing './lib/python3.5/site-packages/cement-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/github3'...
Listing './lib/python3.5/site-packages/github3/gists'...
Listing './lib/python3.5/site-packages/github3/issues'...
Listing './lib/python3.5/site-packages/github3/repos'...
Listing './lib/python3.5/site-packages/github3/search'...
Listing './lib/python3.5/site-packages/github3.py-0.9.6.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/scrum_tools-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/scrumtools'...
Compiling './lib/python3.5/site-packages/scrumtools/evaltool.py'...
***   File "./lib/python3.5/site-packages/scrumtools/evaltool.py", line 76
    print colored("-- Groups", 'green')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scrumtools/github.py'...
***   File "./lib/python3.5/site-packages/scrumtools/github.py", line 112
    print colored("Validating GitHub account '%s' for user '%s'..." % (u[key_github], u[key_username]), 'green'),
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scrumtools/trello.py'...
***   File "./lib/python3.5/site-packages/scrumtools/trello.py", line 124
    print colored("Validating Trello account '%s' for user '%s'..." % (u[key_trello], u[key_username]), 'green'),
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/trello'...
Listing './lib/python3.5/site-packages/trello-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate.py-3.0.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
